--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -210,27 +210,28 @@
   margin-bottom: 15px;
 }
 
-.quantity-input {
+.quantity-input{
   width: 30px;
+  
+}
+
+.quantity-input, .save-quantity-link{
   display: none;
 }
 
-.save-quantity-link {
+.is-editing-quantity .quantity-input{
+  display: initial;
+
+}
+
+.is-editing-quantity .save-quantity-link{
+  display: initial;
+}
+
+.is-editing-quantity .update-quantity-link{
   display: none;
 }
-
-.is-editing-quantity .quantity-input {
-  display: initial;
-}
-
-.is-editing-quantity .save-quantity-link {
-  display: initial;
-}
-
 .is-editing-quantity .quantity-label {
   display: none;
 }
 
-.is-editing-quantity .update-quantity-link {
-  display: none;
-}
